--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,11 @@ h6 {
 }
 .ctrlItemFormTable td {
 	padding: 5px 10px;
-	text-align:right;
+	text-align: left;
+}
+.ctrlItemFormTable td:first-child {
+	max-width: 25%;
+	width: 25%;
 }
 .ctrlItemFormGroup {
 	border: 1px solid #808080;
